<resources>
    <string name="facebook_app_id">3114952451878428</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="sign_up_login">1</string>
    <string name="fb_login">2</string>
    <string name="android_user_login_type">2</string>
    <string name="app_name">Sabrosa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_progress_loader_dot_color">#dd353d</string>
    <string name="my_order_status_color_code">#dd353d</string>
    <string name="store_close_status_txt_color">#dd0014</string>
    <string name="store_open_status_txt_color">#1f8b04</string>
    <string name="dark_txt_color">#BF151515</string>
    <string name="open_store_name_text_view_color">#7a3d25</string>
    <string name="open_store_status_text_view_color">#1f8b04</string>
    <string name="open_store_rating_text_view_color">#92b036</string>
    <string name="open_store_min_amt_text_view_color">#dd353d</string>
    <string name="closse_store_text_view_color">#bdbdbd</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="ok_btn_txt">OK</string>
    <string name="done_btn_txt">Done</string>
    <string name="send_otp">Send Otp</string>
    <string name="go_btn">Go</string>
    <string name="login_btn_txt">Login</string>
    <string name="yes_btn_txt">Yes</string>
    <string name="no_btn_txt">No</string>
    <string name="amount_payable">Amount payable</string>
    <string name="place_order">Place order</string>
    <string name="no_internet">No internet connection.</string>
    <string name="pick_image_intent_text">Select your image:</string>
    <string name="restarent_was_closed_txt">Restaurant was closed.</string>
    <string name="cash_on_delivery_txt">Cash On Delivery</string>
    <string name="inclusive_of_tax">Inc of all taxes</string>
    <string name="tab_one_name">Paypal</string>
    <string name="tab_two_name">Razor pay</string>
    <string name="tab_three_name">Cash on delivery</string>
    <string name="proc_to_pay_wallet_txt">Wallet</string>
    <string name="select_language">Select language</string>
    <string name="btn_arabic">Arabic</string>
    <string name="btn_english">English</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_content">You are one step away from enjoying the \n adorable shopping experience.</string>
    <string name="no_internet_conn_tit_txt">No internet connection</string>
    <string name="no_internet_conn_msg_txt">No internet connection in your device. Please enable it.</string>
    <string name="no_internet_conn_ok_btn_txt">OK</string>
    <string name="slide_one_title">Shop from your nearby store</string>
    <string name="slide_two_title">Add products in to cart</string>
    <string name="slide_three_title">Real time updates on your order</string>
    <string name="slide_four_title">Quick and scheduled delivery</string>
    <string name="slide_one_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="slide_two_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="slide_three_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="slide_four_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="btn_skip">SKIP</string>
    <string name="get_started">Getting started</string>
    <string name="sign_in">Sign In</string>
    <string name="Login_Otp">Login via Otp</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_show_password">Show</string>
    <string name="hint_hide_password">Hide</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_signin">Sign in</string>
    <string name="hint_forgotpassword">Forgot password?</string>
    <string name="hint_or">Or</string>
    <string name="hint_dont_have_an_account">Don\'t have an account?</string>
    <string name="hint_create_one">Create one!</string>
    <string name="hint_order_without_account">Order without an account</string>
    <string name="hint_express_checkout">Express Checkout</string>
    <string name="hint_email_and_phone_no">Email</string>
    <string name="terms_conditions_tit_txt">Terms &amp; Conditions</string>
    <string name="privacy_policy_tit_txt">Privacy Policy</string>
    <string name="hint_forgot_password">Forgot password</string>
    <string name="hint_submit">Submit</string>
    <string name="hint_signup">Sign Up</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_mobile_with_country_code">Mobile number</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_female">Female</string>
    <string name="hint_male">Male</string>
    <string name="hint_civil_id">Civil ID</string>
    <string name="hint_select_cooperative">Select cooperative</string>
    <string name="hint_member_id">Member ID</string>
    <string name="hint_i_agree_the_terms_and_conditions_txt">I agree the <![CDATA[<font color="#e91e63"><b>Terms &amp; Conditions </b></font>]]> of Foodrunner</string>
    <string name="hint_already_have_an_account">Already have an account?</string>
    <string name="hint_login">Login!</string>
    <string name="hint_sign_up_with_facebook"> f &#160; &#160;  Sign up with facebook</string>
    <string name="hint_reset_password">Reset your password</string>
    <string name="hint_for_accept">By proceeding you agree to our <b>Terms Of Service</b> and <b>Privacy Policy</b></string>
    <string name="err_msg_name">Enter the name</string>
    <string name="err_msg_first_name">Enter the first name</string>
    <string name="err_msg_last_name">Enter the last name</string>
    <string name="err_msg_email">Enter valid mail ID</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_mobile">Enter the mobile number</string>
    <string name="err_msg_valid_mobile">Enter the valid mobile number</string>
    <string name="err_msg_civilID">Enter the civil ID</string>
    <string name="err_msg_valid_civilID">Enter the valid civil ID</string>
    <string name="err_msg_memberID">Enter the member ID</string>
    <string name="err_msg_checkbox">Please agree the terms and conditions.</string>
    <string name="err_msg_city_not_found">City not found.</string>
    <string name="err_msg_no_loc_found">Location not found.</string>
    <string name="err_msg_select_any_city">Select any city.</string>
    <string name="err_msg_select_any_loc_txt">No location found in city. Please change the city.</string>
    <string name="err_msg_select_any_loc">Select any location.</string>
    <string name="err_msg_password_character">Password must be atleast 5 characters long.</string>
    <string name="err_msg_card_num">Enter Card Number</string>
    <string name="err_msg_card_name">Enter Card Name</string>
    <string name="err_msg_card_cvv_num">Enter Card CVV Number</string>
    <string name="err_msg_email_or_phone_no_txt">Enter valid Email Id</string>
    <string name="hint_review">Reviews</string>
    <string name="sto_review_empty_msg_txt">No reviews found</string>
    <string name="sto_review_dialog_tit_txt">How do you feel?</string>
    <string name="sto_reivew_comments_hint_txt">Share your review</string>
    <string name="sto_review_done_btn_txt">Done</string>
    <string name="stor_review_comm_err_msg_txt">Please enter comments.</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="sub_total">Sub Total</string>
    <string name="deliver_charges">Delivery charges</string>
    <string name="my_cart">My cart</string>
    <string name="my_cart_tax_txt">Tax</string>
    <string name="my_cart_mini_amt_dialog_txt">Minimum order amount  </string>
    <string name="card_number">Card number</string>
    <string name="your_name_on_card">Your name on card</string>
    <string name="expiry_year">Expiry year</string>
    <string name="cvv_number">CVV number</string>
    <string name="btn_pay">Pay</string>
    <string name="my_carts_empty_txt_view">Your cart looks empty. Add your items into cart and they will show up here!</string>
    <string name="my_carts_err_msg_when_cart_empty_txt">Cart is empty. Please add procucts.</string>
    <string name="welcome_online_pay_messages"> Please pay <![CDATA[<font color="#dd353d"><b>%1$s </b></font>]]> through your credit card.</string>
    <string name="welcome_online_wallet_messages"> Please pay <![CDATA[<font color="#dd353d"><b>%1$s </b></font>]]> through your wallet.</string>
    <string name="welcome_messages"> Please pay <![CDATA[<font color="#dd353d"><b>%1$s </b></font>]]>to the delivery boy, when your order is delivered.</string>
    <string name="less_wallet_amt_msg_txt">Now your wallet amount is lessthan purchese amount.</string>
    <string name="amount"><![CDATA[<font color="#dd353d"><b>%1$s</b></font>]]><![CDATA[<font color="#999999"><small>%2$s</small></font>]]></string>
    <string name="amount_space"><![CDATA[<font color="#dd353d"><b>%1$s </b></font>]]><![CDATA[<font color="#999999"><small>%2$s </small></font>]]></string>
    <string name="right_amount"><![CDATA[<font color="#999999"><b>%1$s</b></font>]]><![CDATA[<font color="#dd353d"><small>%2$s</small></font>]]></string>
    <string name="right_amount_space"><![CDATA[<font color="#999999"><b>%1$s </b></font>]]><![CDATA[<font color="#000000"><small>%2$s </small></font>]]></string>
    <string name="closed_amount"><![CDATA[<font color="#999999"><b>%1$s</b></font>]]><![CDATA[<font color="#999999"><small>%2$s</small></font>]]></string>
    <string name="closed_amount_space"><![CDATA[<font color="#999999"><b>%1$s </b></font>]]><![CDATA[<font color="#999999"><small>%2$s </small></font>]]></string>
    <string name="nav_city_name_txt">Kuwait city</string>
    <string name="nav_restaurants_txt">Restaurants</string>
    <string name="nav_my_profile_txt">My Profile</string>
    <string name="nav_my_informations_txt">My informations</string>
    <string name="nav_my_address_txt">My address</string>
    <string name="nav_my_orders_txt">My Orders</string>
    <string name="nav_my_carts_txt">My cart</string>
    <string name="nav_my_favourites_txt">My favourites</string>
    <string name="nav_others_txt">Others</string>
    <string name="nav_offers_txt">Offers</string>
    <string name="nav_notifications_txt">Notifications</string>
    <string name="nav_help_support_txt">Help &amp; Support</string>
    <string name="nav_rate_us_txt">Rate us</string>
    <string name="nav_about_us_txt">About us</string>
    <string name="nav_language_txt">Language</string>
    <string name="my_ord_det_return_ord_dialog_tit_txt">Select reason to return from below!</string>
    <string name="my_ord_det_sub_btn">Submit</string>
    <string name="my_ord_det_ret_ord_dia_comm_txt">Comments</string>
    <string name="proc_to_chec_choo_slot_txt">Choose slot</string>
    <string name="base_menu_retaurants_txt">Restaurants</string>
    <string name="base_menu_my_carts_txt">My cart</string>
    <string name="base_menu_my_orders_txt">My orders</string>
    <string name="base_menu_my_account_txt">Account</string>
    <string name="country">Country</string>
    <string name="my_account_Settings">Settings</string>
    <string name="pic_my_curr_loc_txt">Pick my current location</string>
    <string name="pic_my_loc_search_txt_hint">Search delivery location</string>
    <string name="pic_my_loc_saved_address_txt">Saved Address</string>
    <string name="pic_my_loc_change_area_btn_txt">Change Area</string>
    <string name="pic_my_loc_no_saved_add_found_txt">No saved address found</string>
</resources>