<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    android:background="@color/app_background_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textDirection="locale"
            android:layout_gravity="center"
            android:text="@string/my_account_Settings"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimary" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:layout_marginTop="@dimen/ho_search_divider_line_size"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="locale"
                android:text="@string/nav_language_txt"
                android:textColor="@color/dark_txt_color"
                android:textSize="@dimen/medium_txt_appearence_size"/>

            <RadioGroup
                android:id="@+id/sett_lang_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/sett_eng_radio_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textSize="@dimen/small_txt_appearence_size"
                    android:textColor="@drawable/sett_language_radio_btn_selector"
                    android:text="@string/btn_english"/>

                <RadioButton
                    android:id="@+id/sett_arabic_radio_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/small_txt_appearence_size"
                    android:visibility="visible"
                    android:textColor="@drawable/sett_language_radio_btn_selector"
                    android:text="@string/btn_arabic"/>


            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_color"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="locale"
                android:text="@string/country"
                android:textColor="@color/dark_txt_color"
                android:textSize="@dimen/medium_txt_appearence_size"/>

            <TextView
                android:id="@+id/sett_country_txt_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textDirection="locale"
                android:layout_marginTop="@dimen/medium_margin"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/small_txt_appearence_size"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>