<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="locale"
                android:text="@string/proc_to_chec_choo_slot_txt"
                android:gravity="center"
                android:textColor="@color/white_color"
                android:padding="@dimen/activity_vertical_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/proc_to_che_deliv_dialog_recyc_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/app_background_color"
            android:layout_weight="1">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white_color">

            <Button
                android:id="@+id/proc_to_che_deliv_dialog_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn_txt"
                android:background="@drawable/signin_rounded_rectangle"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="ButtonStyle"
                android:layout_margin="@dimen/big_margin"/>

            <Button
                android:id="@+id/proc_to_che_deliv_dialog_done_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done_btn_txt"
                android:background="@drawable/signin_rounded_rectangle"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="ButtonStyle"
                android:layout_margin="@dimen/big_margin"/>

        </LinearLayout>


    </LinearLayout>






</FrameLayout>